# BluetoothLibraryPlayground

./: .gitmodules  README.md
NUS/Central/SimpleBluetoothLowEnergySocket/: CMakeLists.txt
